--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_API_URL=https://back-powercookies-production.up.railway.app/
+MONGO_URI=mongodb://mongo:zfqAspGFwCJDMFbuAxwxosaHfPSFgHxG@autorack.proxy.rlwy.net:35310 
