--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://back-powercookies-production.up.railway.app/
-MONGO_URI=mongodb://mongo:zfqAspGFwCJDMFbuAxwxosaHfPSFgHxG@autorack.proxy.rlwy.net:35310 
+VITE_API_URL=https://back-powercookies.onrender.com
+MONGO_URI=mongodb://mongo:iWnuUCOpKSIUMkXJyyBXoJJCMdXjJVRI@junction.proxy.rlwy.net:58931
